Fix #413: issue in l10n for French
For SUSE stylesheets 2022, 2021, and 2013

--- a/suse2013/common/l10n/fr.xml
+++ b/suse2013/common/l10n/fr.xml
@@ -61,13 +61,13 @@
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
-      <l:template name="example-label" text="Exemple %nt&#160;:"/>
+      <l:template name="example-label" text="Exemple %n&#160;:"/>
       <l:template name="example-title" text="%t"/>
-      <l:template name="figure-label" text="Figure %nt&#160;:"/>
+      <l:template name="figure-label" text="Figure %n&#160;:"/>
       <l:template name="figure-title" text="%t"/>
       <l:template name="glosslist-label" text=""/>
       <l:template name="glosslist-title" text="%t"/>
-      <l:template name="procedure-label" text="Proc&#233;dure %nt&#160;:"/>
+      <l:template name="procedure-label" text="Proc&#233;dure %n&#160;:"/>
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="Tableau %n&#160;:"/>
       <l:template name="table-title" text="%t"/>
