Fix #513: Correct SBP stylesheets
* Fix broken PDF generation in `fo:block-container`
* Add date and localized date key to FO/XHTML
* Fix author alignment in XHTML
* SBP(FO,XHTML): Group author elements
  * Group author, editor, and othercredit into an authorgroup
    and apply the authorgroup template (use exsl:node-set() function)
  * Make article.titlepage.recto the last template

Co-authored-by: Meike Chabowski <chabowski@@users.noreply.github.com>

--- a/suse2022-ns/common/l10n/da.xml
+++ b/suse2022-ns/common/l10n/da.xml
@@ -13,6 +13,8 @@
    <l:gentext key="Contributors"    text="Bidragydere"/>
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="Dato"/>
+   <l:gentext key="date" text="dato"/>
 
    <l:gentext key="selectlanguage" text="Vælg sprog"/>
    <l:gentext key="selectformat" text="Vælg format"/>
