--- a/suse2022-ns/common/l10n/cs.xml
+++ b/suse2022-ns/common/l10n/cs.xml
@@ -10,6 +10,8 @@
    <l:gentext key="Contributors"    text="Přispěvatelé"/>
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="Datum"/>
+   <l:gentext key="date" text="datum"/>
 
    <l:gentext key="selectlanguage" text="Vybrat jazyk"/>
    <l:gentext key="selectformat" text="Vybrat formát"/>
