--- a/suse2022-ns/common/l10n/de.xml
+++ b/suse2022-ns/common/l10n/de.xml
@@ -12,6 +12,8 @@
    <l:gentext key="Contributors"    text="Mitwirkende" />
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="Datum"/>
+   <l:gentext key="date" text="Datum"/>
 
    <l:gentext key="selectlanguage" text="Sprache auswählen"/>
    <l:gentext key="selectformat" text="Format auswählen"/>
