--- a/suse2022-ns/common/l10n/es.xml
+++ b/suse2022-ns/common/l10n/es.xml
@@ -13,6 +13,8 @@
    <l:gentext key="Contributors"    text="Colaboradores"/>
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="Fecha"/>
+   <l:gentext key="date" text="fecha"/>
 
    <l:gentext key="hyphenation-push-character-count" text="5"/>
    <l:gentext key="hyphenation-remain-character-count" text="5"/>
