--- a/suse2022-ns/common/l10n/it.xml
+++ b/suse2022-ns/common/l10n/it.xml
@@ -13,6 +13,8 @@
    <l:gentext key="Contributors"    text="Collaboratori" />
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="Data"/>
+   <l:gentext key="date" text="Data"/>
 
    <l:gentext key="selectlanguage" text="Seleziona lingua" />
    <l:gentext key="selectformat" text="Seleziona formato" />
