--- a/suse2022-ns/common/l10n/ja.xml
+++ b/suse2022-ns/common/l10n/ja.xml
@@ -12,6 +12,8 @@
    <l:gentext key="Contributors"    text="寄稿者" />
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="日にち"/>
+   <l:gentext key="date" text="日にち"/>
 
    <l:gentext key="selectlanguage" text="言語の選択"/>
    <l:gentext key="selectformat" text="フォーマットの選択"/>
