--- a/suse2022-ns/common/l10n/ko.xml
+++ b/suse2022-ns/common/l10n/ko.xml
@@ -12,6 +12,8 @@
    <l:gentext key="Contributors"    text="기여자"/>
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="날짜"/>
+   <l:gentext key="date" text="데이트"/>
 
    <l:gentext key="PubDate" text="게시일"/>
    <l:gentext key="pubdate" text="게시일"/>
