--- a/suse2022-ns/common/l10n/lt_lt.xml
+++ b/suse2022-ns/common/l10n/lt_lt.xml
@@ -12,6 +12,8 @@
    <l:gentext key="Contributors"    text="Bendradarbiai"/>
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="Data"/>
+   <l:gentext key="date" text="data"/>
 
    <l:gentext key="selectlanguage" text="Pasirinkti kalbą"/>
    <l:gentext key="selectformat" text="Pasirinkti formatą"/>
