--- a/suse2022-ns/common/l10n/nl.xml
+++ b/suse2022-ns/common/l10n/nl.xml
@@ -15,6 +15,8 @@
    <l:gentext key="pubdate" text="publicatiedatum"/>
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="Datum"/>
+   <l:gentext key="date" text="datum"/>
 
    <l:gentext key="selectlanguage" text="Taal selecteren"/>
    <l:gentext key="selectformat" text="Indeling selecteren"/>
