--- a/suse2022-ns/common/l10n/pt_br.xml
+++ b/suse2022-ns/common/l10n/pt_br.xml
@@ -12,6 +12,8 @@
    <l:gentext key="Contributors"    text="Colaboradores"/>
 
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="Date" text="Data"/>
+   <l:gentext key="date" text="data"/>
 
    <l:gentext key="selectlanguage" text="Selecionar Idioma"/>
    <l:gentext key="selectformat" text="Selecionar Formato"/>
