--- a/suse2022-ns/common/l10n/ru.xml
+++ b/suse2022-ns/common/l10n/ru.xml
@@ -11,6 +11,8 @@
    <l:gentext key="Contributors"    text="Участники"/>
 
    <l:gentext key="admonseparator"  text="! " />
+   <l:gentext key="Date" text="Свидание"/>
+   <l:gentext key="date" text="свидание"/>
 
    <l:gentext key="selectlanguage" text="Выбрать язык" />
    <l:gentext key="selectformat" text="Выбрать формат" />
