--- a/suse2022-ns/common/l10n/zh_cn.xml
+++ b/suse2022-ns/common/l10n/zh_cn.xml
@@ -12,6 +12,8 @@
   <l:gentext key="Contributors"    text="投稿者" />
 
   <l:gentext key="admonseparator"  text="：" />
+  <l:gentext key="Date" text="日期"/>
+  <l:gentext key="date" text="日期"/>
 
   <l:gentext key="selectlanguage" text="选择语言" />
   <l:gentext key="selectformat" text="选择格式" />
