--- a/suse2022-ns/common/l10n/da.xml
+++ b/suse2022-ns/common/l10n/da.xml
@@ -190,7 +190,7 @@
    </l:context>
 
 
-   <l:context name="msgset">
+   <l:context name="keycap">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/><!-- mdash -->
       <l:template name="command" text="&#x2318;"/>
@@ -208,6 +208,7 @@
       <l:template name="other" text="???"/>
       <l:template name="pagedown" text="Side &#x02193;"/>
       <l:template name="pageup" text="Side &#x02191;"/>
+      <l:template name="return" text="↵"/>
       <l:template name="right" text="&#x02192;"/><!-- rarr -->
       <l:template name="shift" text="Skift"/>
       <l:template name="space" text="Mellemrum"/>
