--- a/suse2022-ns/common/l10n/de.xml
+++ b/suse2022-ns/common/l10n/de.xml
@@ -174,7 +174,7 @@
       <l:template name="toc" text="%t"/>
    </l:context>
 
-   <l:context name="msgset">
+   <l:context name="keycap">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
       <l:template name="command" text="&#x2318;"/>
@@ -192,6 +192,7 @@
       <l:template name="other" text="???"/>
       <l:template name="pagedown" text="Bild &#x02193;"/>
       <l:template name="pageup" text="Bild &#x02191;"/>
+      <l:template name="return" text="↵"/>
       <l:template name="right" text="&#x02192;"/><!-- rarr -->
       <l:template name="shift" text="Umschalttaste"/>
       <l:template name="space" text="Leertaste"/>
