--- a/suse2022-ns/common/l10n/es.xml
+++ b/suse2022-ns/common/l10n/es.xml
@@ -195,7 +195,7 @@
       <l:template name="toc" text="%t"/>
    </l:context>
 
-   <l:context name="msgset">
+   <l:context name="keycap">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
       <l:template name="command" text="&#x2318;"/>
@@ -214,6 +214,7 @@
       <l:template name="other" text="???"/>
       <l:template name="pagedown" text="P&#xe1;gina &#x02193;"/>
       <l:template name="pageup" text="P&#xe1;gina &#x02191;"/>
+      <l:template name="return" text="↵"/>
       <l:template name="right" text="&#x02192;"/><!-- rarr -->
       <l:template name="shift" text="May&#xfa;s"/>
       <l:template name="space" text="Espacio"/>
