--- a/suse2022-ns/common/l10n/fi.xml
+++ b/suse2022-ns/common/l10n/fi.xml
@@ -186,7 +186,7 @@
       <l:template name="part" text="Osa&#160;%n&#160;%t"/>
    </l:context>
 
-   <l:context name="msgset">
+   <l:context name="keycap">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/><!-- mdash -->
       <l:template name="command" text="&#x2318;"/>
@@ -204,6 +204,7 @@
       <l:template name="other" text="???"/>
       <l:template name="pagedown" text="Sivu &#x02193;"/>
       <l:template name="pageup" text="Sivu &#x02191;"/>
+      <l:template name="return" text="↵"/>
       <l:template name="right" text="&#x02192;"/><!-- rarr -->
       <l:template name="shift" text="Vaihto"/>
       <l:template name="space" text="V&#228;li"/>
