--- a/suse2022-ns/common/l10n/it.xml
+++ b/suse2022-ns/common/l10n/it.xml
@@ -189,7 +189,7 @@
       <l:template name="format" text="d.m.Y"/>
    </l:context>
 
-   <l:context name="msgset">
+   <l:context name="keycap">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
       <l:template name="command" text="&#x2318;"/>
@@ -207,6 +207,7 @@
       <l:template name="other" text="???"/>
       <l:template name="pagedown" text="Pagina &#x02193;"/>
       <l:template name="pageup" text="Pagina &#x02191;"/>
+      <l:template name="return" text="↵"/>
       <l:template name="right" text="&#x02192;"/><!-- rarr -->
       <l:template name="shift" text="Shift"/>
       <l:template name="space" text="Space"/>
