--- a/suse2022-ns/common/l10n/ko.xml
+++ b/suse2022-ns/common/l10n/ko.xml
@@ -204,7 +204,7 @@
       <l:template name="toc" text="%t"/>
    </l:context>
 
-   <l:context name="msgset">
+   <l:context name="keycap">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/><!-- mdash -->
       <l:template name="command" text="&#x2318;"/>
@@ -222,6 +222,7 @@
       <l:template name="other" text="???"/>
       <l:template name="pagedown" text="Page &#x02193;"/>
       <l:template name="pageup" text="Page &#x02191;"/>
+      <l:template name="return" text="↵"/>
       <l:template name="right" text="&#x02192;"/><!-- rarr -->
       <l:template name="shift" text="Shift"/>
       <l:template name="space" text="Space"/>
