Set version to 2.90.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Tue Apr 18 11:02:00 UTC 2022 - tomschr@users.noreply.github.com
+
+- Update 2.90.0
+  - Correct SUSE logo in suse2022-ns/fo/logo.xsl
+
+-------------------------------------------------------------------
 Thu Mar 02 15:40:00 UTC 2022 - tomschr@users.noreply.github.com
 
 - Update 2.89.0
