Set version to 2.91.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Mon May 09 13:25:00 UTC 2022 - tomschr@users.noreply.github.com
+
+- Update 2.91.1
+  - Improve social media (Twitter OpenGraph) #544 
+
+-------------------------------------------------------------------
 Mon May 08 15:25:00 UTC 2022 - tomschr@users.noreply.github.com
 
 - Update 2.91.0
