--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,13 @@
 -------------------------------------------------------------------
+Thu Aug 10 15:46:00 UTC 2022 - tomschr@users.noreply.github.com
+
+- Update 2.92.4
+  - Update Qualtrics JS script (#560)
+  - TRD/FO: Process `d:meta[@name="platform"]` in book (#566)
+  - XHTML: Trim text for twitter:* metadata (#565)
+  - Change param socialmedia.description.length=125 (83b4557)
+
+-------------------------------------------------------------------
 Thu Aug 03 09:10:00 UTC 2022 - tomschr@users.noreply.github.com
 
 - Update 2.92.3
