Process <revhistory> in book & article title pages
* Integrate it in title page
* Introduce additional parameters:
  * $generate.revhistory=1|0
    Enable/disable revhistory processing
  * $revision.limit=''|INT
    Limit the revision list to INT entries.
    If empty, display all
  * $revision.add.div.title=1|0
    If there is no revhistory/title, should the article/book
    title be included after the default "Revision History"?
* Sort the revision entries by date
* Add CSS style
* Change link to revhistory page:
  * Add ARIA attributes for revhistory link on title page
  * Open a new tab when clicked
* Include revhistory template in titlepage.mode
* Open link in
* Add revision key to l10n context=title

--- a/suse2022-ns/common/l10n/ar.xml
+++ b/suse2022-ns/common/l10n/ar.xml
@@ -249,6 +249,7 @@ translators apparently want those. - sknorr, 2016-09-30 -->
 
    <l:context name="title">
       <l:template name="part" text="الجزء&#160;%n&#160;%t"/>
+      <l:template name="revhistory" text="%t"/>
    </l:context>
 
    <l:context name="keycap">
