--- a/suse2022-ns/common/l10n/cs.xml
+++ b/suse2022-ns/common/l10n/cs.xml
@@ -222,6 +222,7 @@
 
    <l:context name="title">
       <l:template name="part" text="Díl&#160;%n „%t“" />
+      <l:template name="revhistory" text="%t"/>
    </l:context>
 
 
