--- a/suse2022-ns/common/l10n/es.xml
+++ b/suse2022-ns/common/l10n/es.xml
@@ -195,6 +195,10 @@
       <l:template name="toc" text="%t"/>
    </l:context>
 
+   <l:context name="title">
+     <l:template name="revhistory" text="%t"/>
+   </l:context>
+
    <l:context name="keycap">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
