--- a/suse2022-ns/common/l10n/it.xml
+++ b/suse2022-ns/common/l10n/it.xml
@@ -189,6 +189,10 @@
       <l:template name="format" text="d.m.Y"/>
    </l:context>
 
+   <l:context name="title">
+     <l:template name="revhistory" text="%t"/>
+   </l:context>
+
    <l:context name="keycap">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
