--- a/suse2022-ns/common/l10n/nl.xml
+++ b/suse2022-ns/common/l10n/nl.xml
@@ -206,6 +206,7 @@
 
    <l:context name="title">
       <l:template name="part" text="Onderdeel&#160;%n&#160;%t"/>
+      <l:template name="revhistory" text="%t"/>
    </l:context>
 
 
