--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------
+Thu Oct 19 05:17:31 UTC 2023 - tomschr@users.noreply.github.com
+
+- Update to 2.92.8
+  * Process <revhistory> in book & article title pages (PR #578)
+  * Add missing "#" for footnote reference (#579)
+  * Process substeps/@performance='optional' (#517)
+
+-------------------------------------------------------------------
 Mon Sep 18 10:42:46 UTC 2023 - tomschr@users.noreply.github.com
 
 - Update 2.92.7
