--- a/suse2022-ns/common/l10n/es.xml
+++ b/suse2022-ns/common/l10n/es.xml
@@ -46,7 +46,7 @@
    <l:gentext key="sharethispage" text="Compartir esta página"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
-   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviatwitter" text="Twitter/X"/>
    <l:gentext key="shareviaemail" text="Correo electrónico"/>
    <l:gentext key="printthispage" text="Imprimir esta página"/>
    <l:gentext key="susecareers" text="Empleo"/>
