--- a/suse2022-ns/common/l10n/ko.xml
+++ b/suse2022-ns/common/l10n/ko.xml
@@ -45,7 +45,7 @@
    <l:gentext key="sharethispage" text="이 페이지 공유"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
-   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviatwitter" text="Twitter/X"/>
    <l:gentext key="shareviaemail" text="전자 메일"/>
    <l:gentext key="printthispage" text="이 페이지 인쇄"/>
    <l:gentext key="susecareers" text="커리어" />
