--- a/suse2022-ns/common/l10n/sv.xml
+++ b/suse2022-ns/common/l10n/sv.xml
@@ -38,7 +38,7 @@
    <l:gentext key="sharethispage" text="Dela den här sidan"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
-   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviatwitter" text="Twitter/X"/>
    <l:gentext key="shareviaemail" text="E-post"/>
    <l:gentext key="printthispage" text="Skriv ut sidan"/>
    <l:gentext key="susecareers" text="Careers"/>
