--- a/suse2022-ns/common/l10n/ar.xml
+++ b/suse2022-ns/common/l10n/ar.xml
@@ -43,7 +43,7 @@ translators apparently want those. - sknorr, 2016-09-30 -->
    <l:gentext key="sharethispage" text="ﻢﺷﺍﺮﻛﺓ ﻩﺬﻫ ﺎﻠﺼﻔﺣﺓ" />
    <l:gentext key="shareviafacebook" text="Facebook" />
    <l:gentext key="sharevialinkedin" text="LinkedIn" />
-   <l:gentext key="shareviatwitter" text="Twitter" />
+   <l:gentext key="shareviatwitter" text="Twitter/X" />
    <l:gentext key="shareviaemail" text="ﺎﻠﺑﺮﻳﺩ ﺍﻺﻠﻜﺗﺭﻮﻨﻳ" />
    <l:gentext key="printthispage" text="ﻂﺑﺎﻋﺓ ﻩﺬﻫ ﺎﻠﺼﻔﺣﺓ" />
    <l:gentext key="susecareers" text="ﺎﻟﻮﻇﺎﺌﻓ" />
