--- a/suse2022-ns/common/l10n/de.xml
+++ b/suse2022-ns/common/l10n/de.xml
@@ -42,7 +42,7 @@
    <l:gentext key="sharethispage" text="Diese Seite teilen"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
-   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviatwitter" text="Twitter/X"/>
    <l:gentext key="shareviaemail" text="E-Mail"/>
    <l:gentext key="printthispage" text="Diese Seite ausdrucken"/>
    <l:gentext key="susecareers" text="Jobs"/>
