--- a/suse2022-ns/common/l10n/en.xml
+++ b/suse2022-ns/common/l10n/en.xml
@@ -42,7 +42,7 @@
    <l:gentext key="sharethispage" text="Share this page"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
-   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviatwitter" text="Twitter/X"/>
    <l:gentext key="shareviaemail" text="E-Mail"/>
    <l:gentext key="printthispage" text="Print this page"/>
    <l:gentext key="susecareers" text="Careers"/>
