--- a/suse2022-ns/common/l10n/fi.xml
+++ b/suse2022-ns/common/l10n/fi.xml
@@ -41,7 +41,7 @@
    <l:gentext key="sharethispage" text="Jaa tämä sivu"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
-   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviatwitter" text="Twitter/X"/>
    <l:gentext key="shareviaemail" text="Sähköposti"/>
    <l:gentext key="printthispage" text="Tulosta tämä sivu"/>
    <l:gentext key="susecareers" text="Careers"/>
