--- a/suse2022-ns/common/l10n/lt_lt.xml
+++ b/suse2022-ns/common/l10n/lt_lt.xml
@@ -42,7 +42,7 @@
    <l:gentext key="sharethispage" text="Bendrinti šį puslapį"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
-   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviatwitter" text="Twitter/X"/>
    <l:gentext key="shareviaemail" text="El. paštas"/>
    <l:gentext key="printthispage" text="Spausdinti šį puslapį"/>
    <l:gentext key="susecareers" text="Careers"/>
