--- a/suse2022-ns/common/l10n/no.xml
+++ b/suse2022-ns/common/l10n/no.xml
@@ -41,7 +41,7 @@
    <l:gentext key="sharethispage" text="Del denne siden"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
-   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviatwitter" text="Twitter/X"/>
    <l:gentext key="shareviaemail" text="E-post"/>
    <l:gentext key="printthispage" text="Skriv ut denne siden"/>
    <l:gentext key="susecareers" text="Careers"/>
