--- a/suse2022-ns/common/l10n/de.xml
+++ b/suse2022-ns/common/l10n/de.xml
@@ -99,8 +99,8 @@
       <l:template name="page.citation" text=" (S.&#160;%p)"/>
 
       <l:template name="intra-separator" text=", "/>
-      <l:template name="intra-article" text="Artikel „%t”"/>
-      <l:template name="intra-book" text="Buch „%t”"/>
+      <l:template name="intra-article" text="Artikel „%t“"/>
+      <l:template name="intra-book" text="Buch „%t“"/>
       <l:template name="intra-chapter" text="Kapitel %n „%t“"/>
       <!--<l:template name="intra-part" text="%n „%t”"/>-->
       <l:template name="intra-sect1" text="Abschnitt %n „%t“"/>
