Fix #597: Correct zh-cn/zh-tw for optional steps
* zh-cn: use correct parenthesis
* zh-tw: use better translation

--- a/suse2022-ns/common/l10n/zh_cn.xml
+++ b/suse2022-ns/common/l10n/zh_cn.xml
@@ -80,7 +80,7 @@
   <l:gentext key="version" text="版本" />
   <l:gentext key="Version" text="版本" />
 
-  <l:gentext key="step.optional" text="(可选)" />
+  <l:gentext key="step.optional" text="（可选）" />
   <l:gentext key="GlossSeeAlso" text="另请参见" />
   <l:gentext key="glossseealso" text="另请参见" />
 
