Set version to 2.94.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Fri Feb 16 16:26:56 UTC 2024 - tomschr@users.noreply.github.com
+
+- Update 2.94.1
+  Fix 3-column layout
+-------------------------------------------------------------------
 Fri Feb 16 13:38:12 UTC 2024 - tomschr@users.noreply.github.com
 
 - Update 2.94.0
