--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------
+Tue Mar 19 12:47:24 UTC 2024 - tomschr@users.noreply.github.com
+
+- Update 2.94.2
+  * Add abstract/para in article.titlepage.recto.auto.mode (SBPs) (#610)
+  * Correct include.ssi.{header,body,footer} params (#613)
+  * Introduce json-ld-base.dir parameter (#614)
+  * Correct social media length (#615)
+-------------------------------------------------------------------
 Fri Feb 16 16:26:56 UTC 2024 - tomschr@users.noreply.github.com
 
 - Update 2.94.1
