--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,15 @@
 -------------------------------------------------------------------
+Mon Mar 25 06:48:35 UTC 2024 - tomschr@users.noreply.github.com
+
+- Update 2.94.3
+  * Fix handling of external JSON-LD generation (#617)
+    Additionally, this commit changes:
+
+    * Add language into external JSON-LD filename
+    * Take into account rootid parameter for filename
+    * Enable JSON-LD structure for HTML by default
+  * Correct social media length (#615)
+-------------------------------------------------------------------
 Tue Mar 19 12:47:24 UTC 2024 - tomschr@users.noreply.github.com
 
 - Update 2.94.2
