--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------
+Wed Feb 12 15:53:01 UTC 2025 - tomschr@users.noreply.github.com
+
+Update 2.95.3
+* Fix #639: Disable hyphenation in article/book title
+* Fix #645: Remove whitespace in title
+* Fix #646: Remove space in compound terms 
+
+-------------------------------------------------------------------
 Wed Feb 12 07:09:16 UTC 2025 - tomschr@users.noreply.github.com
 
 Update to 2.95.2
