--- a/suse2022-ns/common/l10n/ko.xml
+++ b/suse2022-ns/common/l10n/ko.xml
@@ -78,6 +78,9 @@
 
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
+      <l:template name="emphasis-open" text=""/>
+      <l:template name="emphasis-close" text=""/>
+      <l:template name="emphasis-style" text="bold" />
 
       <l:template name="example-label" text="&#50696;&#51228; %n:"/>
       <l:template name="example-title" text="%t"/>
