--- a/suse2022-ns/common/l10n/pl.xml
+++ b/suse2022-ns/common/l10n/pl.xml
@@ -74,6 +74,9 @@
 
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
+      <l:template name="emphasis-open" text=""/>
+      <l:template name="emphasis-close" text=""/>
+      <l:template name="emphasis-style" text=""/>
 
       <l:template name="example-label" text="Przykład&#160;%n:"/>
       <l:template name="example-title" text="%t"/>
