--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,14 @@
 -------------------------------------------------------------------
+Wed Feb 26 13:10:44 UTC 2025 - tomschr@users.noreply.github.com
+
+Update to 2.95.5
+* #683: Add runinhead.title.end.punct to fix colon in formalpara/title
+* #682: Add missing intra-appendix translations
+* #670: Adjust syntax highlighting
+* #673: Change emphasis for Asian languages
+* #681/#680: double rel, use rel="preload"
+
+-------------------------------------------------------------------
 Wed Feb 19 09:30:38 UTC 2025 - tomschr@users.noreply.github.com
 
 * Update to 2.94.4
